# performance-dashboard

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile.openshift  Makefile  README.md  cpu_dashboard.py  dashboard.py  dashboard_styles.py  intelliconfig.py  llmd_dashboard.py  mlperf_datacenter.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
datasets/: generate_summaries.py
datasets/summaries/: deepseek-r1.csv  gpt-oss.csv  sharegpt-vicuna.csv  swebench-lite.csv
deploy/: openshift-deployment-staging.yaml  openshift-deployment.yaml  openshift-route-staging.yaml  openshift-route.yaml  openshift-service-staging.yaml  openshift-service.yaml
docs/: CODE_QUALITY.md
manual_runs/: __init__.py
manual_runs/scripts/: README-old.md  README.md  __init__.py  import_manual_run_jsons.py  import_manual_run_jsons_old.py  import_manual_runs_json_v2.py  import_manual_runs_llm_d.py
manual_runs/scripts/llm-d/: README.md
manual_runs/scripts/vllm/: README.md  __init__.py  import_manual_runs_json_v2.py
mlperf-data/: mlperf-5.0.csv  mlperf-5.1.csv  mlperf-6.0.csv
mlperf-data/original/: README.md  generate_dataset_summaries.py
mlperf-data/summaries/: README.md  llama2-70b-99.csv  llama3-1-405b.csv  llama3-1-8b-datacenter.csv  mixtral-8x7b.csv
tests/: README.md  __init__.py  conftest.py  test_data_processing.py  test_import_script.py  test_integration.py  test_mlperf_datacenter.py
